--- a/src/styles/components/_header.css
+++ b/src/styles/components/_header.css
@@ -1,16 +1,23 @@
-.header {
-  background-color: var(--body-color);
+.headerStickyContainer {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 99;
   height: var(--header-height);
-  transition: 0.3s;
-  position: fixed;
+  position: sticky;
+}
+
+.header {
+  background-color: var(--sidebar-color);
+  transition: var(--tran-03);
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  padding: 0 50px;
+  margin: auto;
+  align-items: center;
 }
 
 .shrink {
-  height: var(--header-shrink-height);
+  height: 50%;
   box-shadow: var(--box-shadow);
-  z-index: 100;
 }
