--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
 @import "_variables.css";
 @import "_globals.css";
 @import "components/_header.css";
+@import "components/_app.css";
+@import "components/_categoryButton.css";
