--- a/src/styles/components/_categoryButton.css
+++ b/src/styles/components/_categoryButton.css
@@ -1,8 +1,9 @@
 .categoryButton {
+  justify-content: center;
   border: none;
+  margin: 5px;
   background-color: transparent;
   padding: 10px;
-  margin-right: 15px;
   transition: var(--tran-03);
   color: var(--text-color);
   flex-basis: 100%;
@@ -11,6 +12,9 @@
   font-size: 0.975rem;
   font-weight: 400;
   line-height: 1.334em;
+  flex-basis: 0;
+  flex-grow: 1;
+  display: flex;
 }
 
 .categoryButton:hover {
