--- a/src/styles/components/_header.css
+++ b/src/styles/components/_header.css
@@ -26,7 +26,7 @@
   display: flex;
   height: 100%;
   justify-content: space-between;
-  padding: 0 50px;
+  width: 90%;
   margin: auto;
   align-items: center;
 }
