--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,8 @@
 @import "_variables.css";
 @import "_globals.css";
+
 @import "components/_header.css";
 @import "components/_app.css";
 @import "components/_categoryButton.css";
+
+@import "pages/_home.css";
