--- a/src/styles/pages/_home.css
+++ b/src/styles/pages/_home.css
@@ -1,20 +1,60 @@
 .home {
   padding: 10px;
   margin: auto;
-  width: 90%;
+  /* width: 90%; */
 }
 .catalog {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   justify-content: center;
+  gap: 50px;
+}
+.product {
+  width: 20%;
+  margin-bottom: 10px;
 }
 
-.product {
-  border: 2px solid #490a3d;
-  border-radius: 5px;
-  background-color: #bd1550;
-  color: #fff;
+.product a {
+  color: var(--text-color);
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.product p {
+  color: var(--text-color);
+  font-size: 0.9rem;
+  line-height: 1.4em;
+  margin-top: 5px;
+}
+
+.productBody {
+  padding: 20px 0px;
+  text-align: left;
+}
+
+.product img {
+  border-radius: 6px;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: var(--box-shadow-light);
+}
+@media screen and (max-width: 1250px) {
+  .product {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .product {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .home {
+    width: 100%;
+  }
+  .product {
+    width: 80%;
+  }
 }
