--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -7,6 +7,8 @@
   --toggle-color: #ddd;
   --text-color: #707070;
   --hover-color: #fff;
+  --footer-color: #f5f5f5;
+  --footer-icon-color: rgb(218, 216, 216);
 
   /* ====== Globals ====== */
   --header-height: 170px;
@@ -30,4 +32,6 @@
   --text-color: #ccc;
   --hover-color: #ccc;
   --box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
+  --footer-color: #26272b;
+  --footer-icon-color: #33353d;
 }
