--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -15,6 +15,7 @@
   --header-shrink-height: 70px;
   --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --box-shadow-light: rgb(17 17 26 / 4%) 0px 0px 16px;
+  --box-shadow-bottom: 0 4px 2px -2px #80808047;
 
   /* ====== Transition ====== */
   --tran-03: all 0.2s ease;
@@ -32,6 +33,7 @@
   --text-color: #ccc;
   --hover-color: #ccc;
   --box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
+  --box-shadow-bottom: 0 4px 2px -2px rgba(0, 0, 0, 1);
   --footer-color: #26272b;
   --footer-icon-color: #33353d;
 }
