--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -33,7 +33,7 @@
   --text-color: #ccc;
   --hover-color: #ccc;
   --box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
-  --box-shadow-bottom: 0 4px 2px -2px rgba(0, 0, 0, 1);
+  --box-shadow-bottom: 0 4px 2px -2px rgb(0 0 0 / 50%);
   --footer-color: #26272b;
   --footer-icon-color: #33353d;
 }
