--- a/src/styles/components/_header.css
+++ b/src/styles/components/_header.css
@@ -88,7 +88,7 @@
   padding: 0;
   left: 0;
   margin-top: 5px;
-  box-shadow: 0 4px 2px -2px gray;
+  box-shadow: var(--box-shadow-bottom);
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   width: 100%;
