types and components

--- a/src/styles/components/_footer.css
+++ b/src/styles/components/_footer.css
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: var(--footer-color);
   padding: 40px 0 40px;
+  transition: var(--tran-03);
 }
 
 .footerContainer {
