--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,5 +5,6 @@
 @import "components/_app.css";
 @import "components/_categoryButton.css";
 @import "components/_footer.css";
+@import "components/_product.css";
 
 @import "pages/_home.css";
